tests/compile-fail/compile_fail__local_in_std.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:21:13
   │
21 │         int x = 4;
   │             ^^^^^ update assignment with this operation not supported in this game


